--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "✨ Personal CLI card of Vaibhav Kesarwani — Software Developer",
   "main": "index.js",
   "bin": {
-    "vaibhav": "./bin/index.js"
+    "vaibhav": "./index.js"
   },
   "type": "module",
   "scripts": {
