update the name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vaibhav-cli",
+  "name": "vaibhav",
   "version": "1.0.2",
   "description": "✨ Personal CLI card of Vaibhav Kesarwani — Software Developer",
   "main": "index.js",
