Update the package.json and also updated the cli to the npx vaibhavv

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vaibhav",
+  "name": "vaibhavv",
   "version": "1.0.3",
   "description": "✨ Personal CLI card of Vaibhav Kesarwani — Software Developer",
   "main": "index.js",
