--- a/package.json
+++ b/package.json
@@ -28,11 +28,17 @@
     "boxen": "^8.0.1",
     "chalk": "^5.6.2",
     "cli-spinner": "^0.2.10",
-    "dayjs": "^1.11.18",
+    "cli-spinners": "^3.3.0",
+    "dayjs": "^1.11.19",
     "figlet": "^1.9.3",
+    "fs": "^0.0.1-security",
     "gradient-string": "^3.0.0",
     "inquirer": "^12.10.0",
     "node-fetch": "^3.3.2",
-    "open": "^10.2.0"
+    "open": "^10.2.0",
+    "ora": "^9.0.0",
+    "path": "^0.12.7",
+    "request": "^2.88.2",
+    "wrap-ansi": "^9.0.2"
   }
 }
